fix(vercel): clean legacy builders and enforce modern edge + static build

--- a/vercel.json
+++ b/vercel.json
@@ -5,25 +5,10 @@
       "runtime": "edge"
     }
   },
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build"
-    }
-  ],
   "routes": [
-    {
-      "src": "^/api/switch/.*",
-      "dest": "/api/switch/[...path].js"
-    },
-    {
-      "src": "^/switch/(.*)$",
-      "dest": "/api/switch/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/"
-    }
+    { "src": "^/api/switch/.*", "dest": "/api/switch/[...path].js" },
+    { "src": "^/switch/(.*)$", "dest": "/api/switch/$1" },
+    { "src": "/(.*)", "dest": "/" }
   ],
   "outputDirectory": "dist"
 }
