--- a/vercel.json
+++ b/vercel.json
@@ -6,9 +6,18 @@
     }
   },
   "routes": [
-    { "src": "^/api/switch/.*", "dest": "/api/switch/[...path].js" },
-    { "src": "^/switch/(.*)$", "dest": "/api/switch/$1" },
-    { "src": "/(.*)", "dest": "/" }
+    {
+      "src": "^/api/switch/.*",
+      "dest": "/api/switch/[...path].js"
+    },
+    {
+      "src": "^/switch/(.*)$",
+      "dest": "/api/switch/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
   ],
   "outputDirectory": "dist"
 }
