--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-  "version": 2, 
+  "version": 2,
   "functions": {
     "api/switch/[...path].js": {
-      "runtime": "edge@2.0.0"
+      "runtime": "edge"
     }
   },
   "routes": [
