fix: enforce @vercel/edge runtime for API routes

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "api/switch/[...path].js": {
-      "runtime": "edge"
+      "runtime": "@vercel/edge@1.0.0"
     }
   },
   "routes": [
